# s-ai

./: .env.example  .gitignore  AGENTS.md  README.md  README_EN.md  docker-compose.yml  index.html  paper.aux  paper.md  paper.out  paper.tex  paper_full.txt  paper_wechat.html  paper_wechat.md  pyproject.toml  requirements.txt  restart_all.py  run_data.py  run_flood.py  run_gis.py  run_hydro.py  run_knowledge.py  run_map.py  run_raster.py  run_web.py  start.ps1  start_all.ps1  start_all.py  test_demo.py  test_demo2.py  test_import.py  test_stream.py
.sisyphus/run-continuation/: ses_172f77fc6ffeLM0vpZJ13oQ47v.json
agents/: Dockerfile
data/: agent_memory.db  conversations.db  dem_beijing.npy  dem_beijing_meta.json  doc_rag.db  spatial_kg.db  test_result.json  tin_frame_000.geojson  tin_frame_001.geojson  tin_frame_002.geojson  tin_frame_003.geojson  tin_frame_004.geojson  tin_frame_005.geojson  tin_frame_006.geojson  tin_frame_007.geojson  tin_frame_008.geojson  tin_frame_009.geojson  tin_frame_010.geojson  tin_triangles.geojson  tin_vertices.geojson
data/generated_tools/: compute_circle_buffer.py  compute_hexagon_boundary.py  compute_honeycomb_grid.py  compute_hydro_monitoring.py  compute_voronoi_polygons.py  compute_voronoi_tessellation.py  compute_xxx.py
data/swmm_models/: sai_demo.inp  (+8 more)
docs/: index.html
paper_html/: index.html  page1.html  page10.html  page11.html  page12.html  page13.html  page14.html  page15.html  page16.html  page17.html  page18.html  page2.html  page3.html  page4.html  page5.html  page6.html  page7.html  page8.html  page9.html
registry/: Dockerfile
sai/: AGENTS.md  config.py
servers/: AGENTS.md
tests/: conftest.py
web/: AGENTS.md  index.html  server.py
(+103 files in other folders)
