[project]
name = "sai"
version = "0.1.0"
description = "Spatial AI - 水利空间智能体平台"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "S-AI Team" }]

dependencies = [
    # MCP Protocol
    "mcp>=1.6.0",

    # LLM
    "zhipuai>=3.0.0",
    "httpx>=0.28.0",

    # GIS Core
    "geopandas>=1.0.0",
    "shapely>=2.0.0",
    "pyproj>=3.7.0",
    "fiona>=1.10.0",
    "rasterio>=1.4.0",
    "richdem>=2.3.0",

    # Data & DB
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "geoalchemy2>=0.16.0",
    "redis>=5.0.0",
    "chromadb>=1.0.0",

    # Server & Transport
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "sse-starlette>=2.0.0",

    # Utilities
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "numpy>=2.0.0",
    "scipy>=1.15.0",
    "matplotlib>=3.10.0",
    "contextily>=1.6.0",
    "folium>=0.19.0",
    "python-docx>=1.1.0",
    "structlog>=24.0.0",
    "tenacity>=9.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
]

hydro = [
    "pyswmm>=2.0.0",
    "whitebox>=2.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "TCH", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["web"]
